--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
 <button class="submit" onclick="sagittarius()">SAGITTARIUS</button>
 <br>
 <br>
-If You don't already know your horoscope enter your birthday below.
+If you don't already know your horoscope enter your birthday below.
 <br>
 <br>
 <select id="month" onchange="monthdays(this.value)">
